--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="form-container">
         <h1 class="form-title">Contact Us</h1>
         
-        <form  method="POST" action = "2023 Operation Harvest Files\process-form.php">
+        <form  method="POST" action = "process-form.php">
             <div class="form-group">
                 <label for="name">First Name:</label>
                 <input type="text" id="name" name="name" required>
